apps/base/uptime-kuma/https-redirect-middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: redirect-https
  namespace: uptime-kuma
spec:
  redirectScheme:
    scheme: https
    permanent: true
